2019-02-14  Peter Stephenson  <p.stephenson@samsung.com>

	* see 44062: back off change to ZLE per-line initiialisation,
	causing problems after failed reads and apparently not needed
	for the intended fix of interrupt handling (40305 / 34656ec2).

2019-02-09  Doron Behar <doron.behar@gmail.com>

	* gitlab !5: Completion/Unix/Command/_abcde:
	New abcde completion.

2019-02-09  Hiroki Noda <kubo39@gmail.com>

	* github #31: Completion/Unix/Command/_nm,
	Completion/Unix/Command/_objdump: Add new demangle
	style, rust and dlang

2019-02-03  dana  <dana@dana.is>

	* unposted: Config/version.mk: Post-release version bump

	* unposted: Config/version.mk, Etc/FAQ.yo, README: Update for
	5.7.1

	* 44034: Completion/Unix/Type/_date_formats: Complete %9./%N,
	adjust some wording

	* 44033: Completion/Unix/Command/_dos2unix: Add completion for
	dos2unix/unix2dos

	* 44030: Src/prompt.c, Test/D01prompt.ztst: Return error for
	unrecognised colour name

2019-01-28  Fredric Silberberg  <fred@silberberg.xyz>

	* github #32: Completion/Unix/Command/_git: Fix a typo in the
	git tag completion.

2018-01-27  dana  <dana@dana.is>

	* unposted: Etc/creating-a-release.txt: Document additional
	release steps

	* 44020: Functions/VCS_Info/Backends/VCS_INFO_detect_p4: Fix
	infinite recursion

2018-01-24  dana  <dana@dana.is>

	* unposted: Config/version.mk: Post-release version bump

	* unposted: Config/version.mk, README: Update for 5.7

2018-01-23  dana  <dana@dana.is>

	* 44012: Test/X04zlehighlight.ztst: Fix spurious test failures
	on OpenBSD

2019-01-23  Mikael Magnusson  <mikachu@gmail.com>

	* 44011: Doc/Zsh/zle.yo, Src/prompt.c, Test/X04zlehighlight.ztst:
	Only use fg_start_code for non-truecolor

2018-01-21  dana  <dana@dana.is>

	* 44001: Completion/Zsh/Context/_brace_parameter: Complete (q+)

2018-01-18  dana  <dana@dana.is>

	* 43990: Completion/Linux/Command/_opkg: Support gain-privileges

2019-01-08  Peter Stephenson  <p.stephenson@samsung.com>
