@@ -1,3 +1,8 @@
+2019-02-18  Peter Stephenson  <p.stephenson@samsung.com>
+
+	* Yutian Li: 44067: Src/hist.c: If history read was interrupted,
+	don't assume next time it was correctly read.
+
 2019-02-14  Peter Stephenson  <p.stephenson@samsung.com>
 
 	* see 44062: back off change to ZLE per-line initiialisation,
